tests/lean/expr_quote.lean.expected.out
expr_quote.lean:1:32: error: invalid quotation, contains universe parameter
meta def f : expr → expr → expr :=
λ (α a : expr), expr.subst (expr.subst ```(λ (_x_1 : Type 2) (_x_2 : _x_1), id.{3} _x_2) α) a
